fix broken layout

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,4 +1,4 @@
-a {
+.footer-container a {
   padding: 5px !important;
 }
 
